--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -12,10 +12,20 @@ html.dark {
 }
 body {
 	background-color: #f2f3f5;
+	--w-e-textarea-bg-color: #fff;
+	--w-e-toolbar-bg-color: var(--color-fill-1);
 }
 body[arco-theme='dark'] {
 	background: #29292c;
 	color: white;
+	/* 富文本编辑器黑暗模式配置 */
+	--w-e-textarea-bg-color: var(--color-neutral-4);
+	--w-e-textarea-color: var(--color-text-1);
+	--w-e-toolbar-color: var(--color-text-1);
+	--w-e-toolbar-bg-color: var(--color-neutral-3);
+	--w-e-toolbar-active-color: var(--color-text-1);
+	--w-e-toolbar-active-bg-color: var(--color-neutral-4);
+	--w-e-toolbar-border-color: var(--color-border-2);
 }
 body::-webkit-scrollbar {
 	width: 8px;
