--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -43,7 +43,7 @@ body::-webkit-scrollbar-thumb {
 
 /* 优化滚动条 */
 .scroll-bar::-webkit-scrollbar {
-	width: 8px;
+	width: 4px;
 	background: #00000000;
 }
 .scroll-bar::-webkit-scrollbar-thumb {
@@ -63,4 +63,9 @@ body::-webkit-scrollbar-thumb {
 	height: 100px;
 	z-index: 999;
 	opacity: 0;
+}
+
+img {
+	-webkit-user-drag: none;
+	/* user-drag: none; */
 }
